feat(persistence): add ProjectManager for per-world project CRUD
- Singleton lifecycle: initialize/shutdown/getInstance (follows ConversationManager)
- Gson TypeAdapter for Project serialization with corrupt JSON recovery
- Archive/reactivate with MAX_ARCHIVED=10 auto-cleanup
- 21 unit tests covering round-trip, corruption, archive, reactivate